# skillregistry

./: .gitignore  README.md  pyproject.toml
eval/: README.md  mattpocock_queries.jsonl  queries.jsonl
examples/: deepagents_integration.py
reports/: mattpocock_ablation_openai_local.md  mattpocock_eval_openai_local.md
src/skillregistry/: __init__.py  cli.py  embedder.py  eval.py  index.py  loader.py  metadata_generator.py  models.py  registry.py  retriever.py  scanner.py
src/skillregistry/backends/: __init__.py  base.py  mock.py  openai_backend.py
tests/: test_eval.py  test_metadata_generator.py  test_registry.py  test_retriever.py  test_scanner.py
tests/fixtures/skills/create-hook/: SKILL.md
tests/fixtures/skills/create-rule/: SKILL.md
tests/fixtures/skills/create-skill/: SKILL.md
tests/fixtures/skills/deploy-kubernetes/: SKILL.md
tests/fixtures/skills/pdf-processing/: SKILL.md
