[project]
name = "skillregistry"
version = "0.1.1"
description = "Semantic skill registry for LLM agents — register, retrieve, and evaluate Cursor-style skills"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Akash Shukla" }]
keywords = ["llm", "agents", "skills", "cursor", "retrieval", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0", "faiss-cpu>=1.8"]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0", "build>=1.0", "ruff>=0.4"]
all = ["skillregistry[local,openai,dev]"]

[project.urls]
Homepage = "https://github.com/Aakash2512git/skillregistry"
Repository = "https://github.com/Aakash2512git/skillregistry"
Documentation = "https://github.com/Aakash2512git/skillregistry#readme"

[project.scripts]
skillregistry = "skillregistry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillregistry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
